Bug 55734 - REGRESSION Crash when subtotals calculated for "none" with cell selected outside subtotal range
Summary: REGRESSION Crash when subtotals calculated for "none" with cell selected outs...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.6.2 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.3 target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-07 16:25 UTC by Mirosław Zalewski
Modified: 2018-03-07 06:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The simpliest document on which you can reproduce crash (7.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-10-07 16:25 UTC, Mirosław Zalewski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mirosław Zalewski 2012-10-07 16:25:51 UTC
Created attachment 68217 [details]
The simpliest document on which you can reproduce crash

Calc crashes if cell outside subtotals range is selected and subtotals are calculated and grouped for "- none -" column.

Steps to reproduce:

1. Open attached document
2. Place cursor in cell outside of subtotals range (e.g. B7)
3. Data → Subtotals
4. Group by: "- none -"
5. Press "OK" and watch LibreOffice crash.

Although I admit that this is some corner case (perhaps user does not know what he is doing), I strongly believe that Calc should not crash.

I could reproduce this on:
- 3.6.1, Debian testing (amd64)
- 3.6.3-dev from 7.10.2012, Windows 7 (i686)

I could NOT reproduce on:
- 3.5.6, Arch Linux (i686) - therefore "regression" tag

Best regards
Mirosław Zalewski
Comment 1 Not Assigned 2012-10-11 07:28:22 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=132740681c7412f4d678ff0768b9807502525f76

only access first element if vector is not empty, fdo#55734



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2012-10-11 14:37:59 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=170521349f3d5e3b6cc16890d66d77121bfd0312&g=libreoffice-3-6

only access first element if vector is not empty, fdo#55734


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2012-10-11 19:01:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4126a8e2244d0c320a53c5720c3d5664563c8acc&g=libreoffice-3-6-3

only access first element if vector is not empty, fdo#55734


It will be available already in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jean-Baptiste Faure 2012-10-28 21:04:40 UTC
Verified on LO 3.6.3.2. No crash

Thank you very much.
Comment 5 Commit Notification 2018-03-07 06:43:00 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a790ee54319583897d82d4372243df870d4452a6

uitest - calc subtotals; tdf#114720 tdf#88792 tdf#88735 tdf#56958 tdf#55734

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.