only access first element if vector is not empty, fdo#55734

Change-Id: I60db486195e7216968dc8c7c7c0c79fb7e8c1b88